name:               essays
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:
    base
    , hakyll == 4.7.2.3
    , filepath
    , pandoc
    , containers
  ghc-options:      -threaded
  default-language: Haskell2010
